# CVRAGent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
Docker/: .dockerignore  Dockerfile
pages/: 1_login.py
src/: embedding.py  parser.py  prompt_lists.py
src/assests/: load.py  styles.css
src/db/: vector_store.py
src/frontend/: domain.py
src/models/: model_config.py  models.py
