[tool.poetry]
name = "CVRAGent"
version = "0.1.0"
description = "A streamlit application to enhance CV by utilizing LLM and RAG. Can do the following:/n1. Suggests key sentences based on job description./n2. Determines the relevence of CV to job description."
authors = ["Hamza Sulaiman <hamza.sulaiman2009@gmail.com"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3"
chromadb = "^1.0.12"
streamlit = "^1.45.1"
python-dotenv = "^1.1.0"
pydantic = "^2.11.5"
langchain-huggingface = "^0.2.0"
langchain-community = "^0.3.24"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.21"
fastembed = "^0.7.0"
faiss-cpu = "^1.11.0"
langchain-chroma = "^0.2.4"
rank-bm25 = "^0.2.2"
langchain-pymupdf4llm = "^0.4.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pyright = "^1.1.401"
pre-commit = "^4.2.0"
pytest = "^8.4.0"


[tool.black]
line-length = 120
target-version = ["py310"]
required-version = "25.1.0"
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
exclude = ["**/__pycache__","**/.pre-commit-config.yaml","**/.gitignore"]
reportMissingTypeStubs = false
